--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
    }
 </style>
 
-<body class="">
+<body class="debug">
    <header class="container-fluid">
       <div class="row">
          <div class="col-3">
@@ -123,11 +123,112 @@
             <button type="button" class="btn btn-primary">Click!!!</button>
          </div>
       </div>
-      <div class="row"></div>
-      <div class="row"></div>
+      <div class="row justify-content-center">
+         <div class="col-12">
+            <h1>Dragons</h1>
+         </div>
+         <div class="col-3 ustify-content-center">
+            <img src="//placekitten.com/200/200" alt="" class="">
+            <h4>Kitty Cat</h4>
+            <button type="button" class="btn btn-primary">Click!!!</button>
+         </div>
+         <div class="col-3">
+            <img src="//placekitten.com/200/200" alt="" class="">
+            <h4>Kitty Cat</h4>
+            <button type="button" class="btn btn-primary">Click!!!</button>
+         </div>
+         <div class="col-3">
+            <img src="//placekitten.com/200/200" alt="" class="">
+            <h4>Kitty Cat</h4>
+            <button type="button" class="btn btn-primary">Click!!!</button>
+         </div>
+         <div class="col-3">
+            <img src="//placekitten.com/200/200" alt="" class="">
+            <h4>Kitty Cat</h4>
+            <button type="button" class="btn btn-primary">Click!!!</button>
+         </div>
+      </div>
+      <div class="row ">
+         <div class="col-12">
+            <h1>Dragons</h1>
+         </div>
+         <div class="col-4 ">
+            <img src="//placekitten.com/200/200" alt="" class="">
+            <h4>Kitty Cat</h4>
+            <button type="button" class="btn btn-primary">Click!!!</button>
+         </div>
+         <div class="col-4">
+            <img src="//placekitten.com/200/200" alt="" class="">
+            <h4>Kitty Cat</h4>
+            <button type="button" class="btn btn-primary">Click!!!</button>
+         </div>
+         <div class="col-4">
+            <img src="//placekitten.com/200/200" alt="" class="">
+            <h4>Kitty Cat</h4>
+            <button type="button" class="btn btn-primary">Click!!!</button>
+         </div>
+         <div class="col-4">
+            <img src="//placekitten.com/200/200" alt="" class="">
+            <h4>Kitty Cat</h4>
+            <button type="button" class="btn btn-primary">Click!!!</button>
+         </div>
+         <div class="col-4">
+            <img src="//placekitten.com/200/200" alt="" class="">
+            <h4>Kitty Cat</h4>
+            <button type="button" class="btn btn-primary">Click!!!</button>
+         </div>
+      </div>
    </main>
-   <footer>
 
+   <footer class="container-fluid bg-secondary">
+
+      <div class="row p-4">
+         <div class="col-3">
+            <h4>Dingus</h4>
+            <h5>Bingus</h5>
+            <h5>Bongus</h5>
+            <h5>Bangus</h5>
+            <h5>Amoungus</h5>
+         </div>
+         <div class="col-3">
+            <h4>Dingus</h4>
+            <h5>Bingus</h5>
+            <h5>Bongus</h5>
+            <h5>Bangus</h5>
+            <h5>Amoungus</h5>
+         </div>
+         <div class="col-3">
+            <h4>Dingus</h4>
+            <h5>Bingus</h5>
+            <h5>Bongus</h5>
+            <h5>Bangus</h5>
+            <h5>Amoungus</h5>
+         </div>
+         <div class="col-3">
+            <h4>Dingus</h4>
+            <h5>Bingus</h5>
+            <h5>Bongus</h5>
+            <h5>Bangus</h5>
+            <h5>Amoungus</h5>
+         </div>
+      </div>
+      <div class="row text-center">
+         <div class="col-12"><button type="button" class="btn btn-primary mdi mdi-flag">Bangus</button></div>
+         <div class="col-12">
+            <div class="row justify-content-center">
+               <div class="col-1">Example</div>
+               <div class="col-1">Example</div>
+               <div class="col-1">Example</div>
+               <div class="col-1">Example</div>
+               <div class="col-1">Example</div>
+               <div class="col-1">Example</div>
+            </div>
+         </div>
+         <div class="col-12">
+            <h6>Copyright © 2021 Deere & Company. All Rights Reserved.</h6>
+         </div>
+         <div class="col-12"></div>
+      </div>
    </footer>
 </body>
 
