end of class commit

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
    }
 </style>
 
-<body class="debug">
+<body class="">
    <header class="container-fluid">
       <div class="row">
          <div class="col-3">
@@ -45,7 +45,7 @@
          </div>
          <nav class="navbar navbar-expand-lg navbar-light bg-light col-9">
             <div class="container-fluid">
-               <a class="navbar-brand" href="#">Navbar</a>
+               <a class="navbar-brand" href="#">Dragon Harmony</a>
                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                   data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                   aria-label="Toggle navigation">
@@ -102,22 +102,22 @@
          <div class="col-12">
             <h1>Biggest Hedgers and Clippers</h1>
          </div>
-         <div class="col-3 ustify-content-center">
+         <div class="col-md-3 ustify-content-center">
             <img src="//placekitten.com/200/200" alt="" class="">
             <h4>Kitty Cat</h4>
             <button type="button" class="btn btn-primary">Click!!!</button>
          </div>
-         <div class="col-3">
+         <div class="col-md-3">
             <img src="//placekitten.com/200/200" alt="" class="">
             <h4>Kitty Cat</h4>
             <button type="button" class="btn btn-primary">Click!!!</button>
          </div>
-         <div class="col-3">
+         <div class="col-md-3">
             <img src="//placekitten.com/200/200" alt="" class="">
             <h4>Kitty Cat</h4>
             <button type="button" class="btn btn-primary">Click!!!</button>
          </div>
-         <div class="col-3">
+         <div class="col-md-3">
             <img src="//placekitten.com/200/200" alt="" class="">
             <h4>Kitty Cat</h4>
             <button type="button" class="btn btn-primary">Click!!!</button>
@@ -127,22 +127,22 @@
          <div class="col-12">
             <h1>Dragons</h1>
          </div>
-         <div class="col-3 ustify-content-center">
+         <div class="col-md-3 ustify-content-center">
             <img src="//placekitten.com/200/200" alt="" class="">
             <h4>Kitty Cat</h4>
             <button type="button" class="btn btn-primary">Click!!!</button>
          </div>
-         <div class="col-3">
+         <div class="col-md-3">
             <img src="//placekitten.com/200/200" alt="" class="">
             <h4>Kitty Cat</h4>
             <button type="button" class="btn btn-primary">Click!!!</button>
          </div>
-         <div class="col-3">
+         <div class="col-md-3">
             <img src="//placekitten.com/200/200" alt="" class="">
             <h4>Kitty Cat</h4>
             <button type="button" class="btn btn-primary">Click!!!</button>
          </div>
-         <div class="col-3">
+         <div class="col-md-3">
             <img src="//placekitten.com/200/200" alt="" class="">
             <h4>Kitty Cat</h4>
             <button type="button" class="btn btn-primary">Click!!!</button>
@@ -152,27 +152,27 @@
          <div class="col-12">
             <h1>Dragons</h1>
          </div>
-         <div class="col-4 ">
+         <div class="col-md-4 ">
             <img src="//placekitten.com/200/200" alt="" class="">
             <h4>Kitty Cat</h4>
             <button type="button" class="btn btn-primary">Click!!!</button>
          </div>
-         <div class="col-4">
+         <div class="col-md-4">
             <img src="//placekitten.com/200/200" alt="" class="">
             <h4>Kitty Cat</h4>
             <button type="button" class="btn btn-primary">Click!!!</button>
          </div>
-         <div class="col-4">
+         <div class="col-md-4">
             <img src="//placekitten.com/200/200" alt="" class="">
             <h4>Kitty Cat</h4>
             <button type="button" class="btn btn-primary">Click!!!</button>
          </div>
-         <div class="col-4">
+         <div class="col-md-4">
             <img src="//placekitten.com/200/200" alt="" class="">
             <h4>Kitty Cat</h4>
             <button type="button" class="btn btn-primary">Click!!!</button>
          </div>
-         <div class="col-4">
+         <div class="col-md-4">
             <img src="//placekitten.com/200/200" alt="" class="">
             <h4>Kitty Cat</h4>
             <button type="button" class="btn btn-primary">Click!!!</button>
@@ -227,7 +227,15 @@
          <div class="col-12">
             <h6>Copyright © 2021 Deere & Company. All Rights Reserved.</h6>
          </div>
-         <div class="col-12"></div>
+         <div class="col-12">
+            <div class="row justify-content-center">
+               <div class="col-1 mdi mdi-youtube"></div>
+               <div class="col-1 mdi mdi-facebook"></div>
+               <div class="col-1 mdi mdi-linkedin"></div>
+               <div class="col-1 mdi mdi-instagram"></div>
+               <div class="col-1 mdi mdi-twitter"></div>
+            </div>
+         </div>
       </div>
    </footer>
 </body>
