--- a/index.html
+++ b/index.html
@@ -215,13 +215,13 @@
       <div class="row text-center">
          <div class="col-12"><button type="button" class="btn btn-primary mdi mdi-flag">Bangus</button></div>
          <div class="col-12">
-            <div class="row justify-content-center">
-               <div class="col-1">Example</div>
-               <div class="col-1">Example</div>
-               <div class="col-1">Example</div>
-               <div class="col-1">Example</div>
-               <div class="col-1">Example</div>
-               <div class="col-1">Example</div>
+            <div class="row justify-content-between justify-content-md-center">
+               <div class="col-sm-4 col-md-1">Example</div>
+               <div class="col-sm-4 col-md-1">Example</div>
+               <div class="col-sm-4 col-md-1">Example</div>
+               <div class="col-sm-4 col-md-1">Example</div>
+               <div class="col-sm-4 col-md-1">Example</div>
+               <div class="col-sm-4 col-md-1">Example</div>
             </div>
          </div>
          <div class="col-12">
